# etdv_ekf_slam

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  frames_2026-03-19_22.05.40.gv  run.sh
circular_controller/: CMakeLists.txt  LOW_SPEED_CONFIG.md  README.md  package.xml
circular_controller/config/: circular_feedback_params.yaml  circular_params.yaml
circular_controller/launch/: circular_controller.launch.py  circular_controller_feedback.launch.py
circular_controller/src/: circular_controller_feedback_node.cpp  circular_controller_node.cpp
docs/: 0-installation-prerequisites.md  1-node-interface.md  2-ekf-core-logic-architecture.md  3-latency-reduction--optimization.md  3-latency-reduction-and-optimization.md  4-current-test-results.md  index.md
docs/plot/: error_x.csv  error_y.csv  latenza_cones.csv  latenza_imu.csv  plot_error.py
ekf_slam/: CMakeLists.txt  README.md  package.xml
ekf_slam/config/: ekf_params.yaml
ekf_slam/docs/PLOT/: error_x.csv  error_y.csv  error_z.csv  latenza.csv  plot_error.py
ekf_slam/include/ekf_slam/: EKF_Pose.h  EKF_SLAM.h
ekf_slam/launch/: ekf_slam.launch.py
ekf_slam/scripts/: tf_to_pose.py
ekf_slam/src/: EKF_Pose.cpp  EKF_SLAM.cpp  ekf_node.cpp
etdv_ekf_slam/config/: ekf_params.yaml
include/ekf_slam/: EKF_Pose.h
launch/: ekf_slam.launch.py
scripts/: tf_to_pose.py
src/: EKF_Pose.cpp  ekf_node.cpp
